--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog/catalog.html">Каталог</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a class="menu-link" href="index.html">Главная</a></li>
+        <li><a class="menu-link" href="catalog/catalog.html">Каталог</a></li>
+        <li><a class="menu-link" href="#">Контакты</a></li>
     </ul>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis aliquid adipisci aut minima perspiciatis, eaque optio architecto ipsam odio iusto voluptatibus voluptas quo dolor quaerat dolorem suscipit unde corporis corrupti!</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium sunt ex accusantium maxime quaerat molestiae sed quasi vero officia error sit tempora soluta, minima blanditiis quo beatae impedit temporibus autem?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptate incidunt molestiae maxime culpa amet nostrum nobis, esse accusamus repellat praesentium vel est natus? Consequuntur molestiae deleniti quidem itaque provident.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore consequuntur quo magni adipisci? Error officiis natus corporis consectetur magni, adipisci quisquam laboriosam placeat vitae aliquid molestiae. Veritatis est quod quisquam?</p>
+    <h1 class="heading">Главная страница</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis aliquid adipisci aut minima perspiciatis, eaque optio architecto ipsam odio iusto voluptatibus voluptas quo dolor quaerat dolorem suscipit unde corporis corrupti!</p>
+    <h2 class="sub-heading">Добро пожаловать на сайт</h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium sunt ex accusantium maxime quaerat molestiae sed quasi vero officia error sit tempora soluta, minima blanditiis quo beatae impedit temporibus autem?</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptate incidunt molestiae maxime culpa amet nostrum nobis, esse accusamus repellat praesentium vel est natus? Consequuntur molestiae deleniti quidem itaque provident.</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore consequuntur quo magni adipisci? Error officiis natus corporis consectetur magni, adipisci quisquam laboriosam placeat vitae aliquid molestiae. Veritatis est quod quisquam?</p>
 </body>
 </html>
