--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <div class="header">
             <div class="header-nav">
-                <img class="header-nav-logo" src="/img/Logo.svg" alt="Logo">
+                <a class="header-logo-link" href="#"><img class="header-nav-logo" src="img/Logo.svg" alt="Logo"></a>
                 <ul class="header-nav-list">
                    <li class="header-nav-list-item"><a href="#">Home</a></li>
                    <li class="header-nav-list-item"><a href="#">About Us</a></li>
