--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Landing</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper wrapper-header">
         <div class="header">
             <div class="header-nav">
                 <a class="header-logo-link" href="#"><img class="header-nav-logo" src="img/Logo.svg" alt="Logo"></a>
@@ -26,14 +27,14 @@
             <div class="header-content">
                 <div class="header-content-title">
                     <h1 class="header-content-title-head">SEO & Digital Marketing For Your Website.</h1>
-                    <p>Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
-                    <button>Start Now</button>
-                    <div class="btn-video">
-                        <img src="/img/icon-video.svg" alt="icon-video">
-                        <button>Watch video</button>
+                    <p>Provide all kind of seo services and help to improve<br>seo ranking. Globally incubate standards.</p>
+                    <div class="header-btns">
+                        <button class="start-now">Start Now</button>
+                       <img src="/img/icon-video.svg" alt="icon-video">
+                        <a href="#">Watch video</a>
                     </div>
                 </div>
-                <img src="/img/header-content.png" alt="header-content">
+                <img class="header-img" src="/img/header-content.png" alt="header-content">
             </div>
             <ul class="header-partners-list">
                 <li class="header-partners-list-item"><img src="img/Liva.svg" alt="Liva"></li>
@@ -42,7 +43,7 @@
                 <li class="header-partners-list-item"><img src="img/Aven.svg" alt="Aven"></li>
                 <li class="header-partners-list-item"><img src="img/Hexlab.svg" alt="Hexlab"></li>
                 <li class="header-partners-list-item"><img src="img/Kanba.svg" alt="Kanba"></li>
-            </div>
+            </ul>
         </div>
         <div class="advantages">
             <div class="advantages-head">
