--- a/index.html
+++ b/index.html
@@ -45,84 +45,90 @@
                 <li class="header-partners-list-item"><img src="img/Kanba.svg" alt="Kanba"></li>
             </ul>
         </div>
-        <div class="advantages">
-            <div class="advantages-head">
-                <div class="advantages-head-text">
-                    <h2>Perfect Solution For Your Business</h2>
-                    <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>
-                    <button>Learn More</button>
+        <div class="wrapper wrapper-advantages">
+            <div class="advantages">
+                <div class="advantages-head">
+                    <div class="advantages-head-text">
+                        <h2>Perfect Solution For<br> Your Business</h2>
+                        <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts for chang the Seamlessly underwhelm optimal testing procedures.</p>
+                        <button>Learn More</button>
+                    </div>
+                    <div class="advantages-head-img">
+                        <img src="img/macbook.png" alt="macbook">
+                    </div>
                 </div>
-                <div class="advantages-head-img">
-                    <img src="img/macbook.png" alt="macbook">
-                </div>
-            </div>
-            <div class="advantages-list">
-                <div class="advantages-list-item">
-                    <img  class="advantage-img" src="img/adv-1.png" alt="adv1">
-                    <h3 class="advantage-head">Grow Your Business</h3>
-                    <p class="advantage-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-                    <p class="advantage-text-bold">Read More...</p>
-                </div>
-                <div class="advantages-list-item">
-                    <img  class="advantage-img" src="img/adv-2.png" alt="adv2">
-                    <h3 class="advantage-head">Get Quality Ieads</h3>
-                    <p class="advantage-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-                    <p class="advantage-text-bold">Read More...</p>
-                </div>
-                <div class="advantages-list-item">
-                    <img  class="advantage-img" src="img/adv-3.png" alt="adv3">
-                    <h3 class="advantage-head">Drive More Sales</h3>
-                    <p class="advantage-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
-                    <p class="advantage-text-bold">Read More...</p>
+                <div class="advantages-list">
+                    <div class="advantages-list-item">
+                        <img  class="advantage-img" src="img/adv-1.png" alt="adv1">
+                        <h3 class="advantage-head">Grow Your Business</h3>
+                        <p class="advantage-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                        <p class="advantage-text-bold">Read More...</p>
+                    </div>
+                    <div class="advantages-list-item">
+                        <img  class="advantage-img" src="img/adv-2.png" alt="adv2">
+                        <h3 class="advantage-head">Get Quality Ieads</h3>
+                        <p class="advantage-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                        <p class="advantage-text-bold">Read More...</p>
+                    </div>
+                    <div class="advantages-list-item">
+                        <img  class="advantage-img" src="img/adv-3.png" alt="adv3">
+                        <h3 class="advantage-head">Drive More Sales</h3>
+                        <p class="advantage-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                        <p class="advantage-text-bold">Read More...</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="services">
-            <h2 class="services-head">Why You Should Choose Us.</h2>
-            <p class="services-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
-            <ul class="services-list">
-                <li class="services-list-item">
-                    <img class="service-img" src="img/illustration-1.png" alt="illustration-1">
-                    <h3 class="service-head">Keyword Research</h3>
-                    <p class="service-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
-                    <button class="service-btn">Learn More</button>
-                </li>
-                <li class="services-list-item">
-                    <img class="service-img" src="img/illustration-2.png" alt="illustration-2">
-                    <h3 class="service-head">Seo Optimazadion</h3>
-                    <p class="service-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
-                    <button class="service-btn">Learn More</button>
-                </li>
-                <li class="services-list-item">
-                    <img class="service-img" src="img/illustration-3.png" alt="illustration-3">
-                    <h3 class="service-head">Social Marketing</h3>
-                    <p class="service-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
-                    <button class="service-btn">Learn More</button>
-                </li>
-            </ul>
-        </div>
-        <div class="what-we-do">
-            <img class="what-we-do-img" src="img/dribbble_illustration_v3 1.png" alt="img">
-            <div class="what-we-do-content">
-                <h3 class="what-we-do-head">You may ask what SEO & why do you need it?</h3>
-                <p class="what-we-do-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary.</p>
-                <ul class="what-we-do-list">
-                    <li class="what-we-do-list-item">
-                        <img class="what-we-do-list-item-img" src="img/wwd-1.png" alt="img">
-                        <h4 class="what-we-do-list-item-head">Social Media Marketing</h4>
-                        <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+        <div class="wrapper wrapper-services">
+            <div class="services">
+                <h2 class="services-head">Why You Should Choose Us.</h2>
+                <p class="services-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business<br> applications through revolutionary catalysts.</p>
+                <ul class="services-list">
+                    <li class="services-list-item">
+                        <img class="service-img" src="img/illustration-1.png" alt="illustration-1">
+                        <h3 class="service-head">Keyword Research</h3>
+                        <p class="service-text">Business applications through revolutionary<br> catalysts for chang the Seamlessly<br> underwhelm dures.</p>
+                        <button class="service-btn">Learn More</button>
                     </li>
-                    <li class="what-we-do-list-item">
-                        <img class="what-we-do-list-item-img" src="img/wwd-2.png" alt="img">
-                        <h4 class="what-we-do-list-item-head">Email Marketing</h4>
-                        <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                    <li class="services-list-item-middle">
+                        <img class="service-img" src="img/illustration-2.png" alt="illustration-2">
+                        <h3 class="service-head">Seo Optimazadion</h3>
+                        <p class="service-text">Business applications through revolutionary<br> catalysts for chang the Seamlessly<br> underwhelm dures.</p>
+                        <button class="service-btn">Learn More</button>
                     </li>
-                    <li class="what-we-do-list-item">
-                        <img class="what-we-do-list-item-img" src="img/wwd-3.png" alt="img">
-                        <h4 class="what-we-do-list-item-head">SEO Optimization</h4>
-                        <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                    <li class="services-list-item">
+                        <img class="service-img" src="img/illustration-3.png" alt="illustration-3">
+                        <h3 class="service-head">Social Marketing</h3>
+                        <p class="service-text">Business applications through revolutionary<br> catalysts for chang the Seamlessly<br> underwhelm dures.</p>
+                        <button class="service-btn">Learn More</button>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="wrapper wrapper-what-we-do">
+            <div class="what-we-do">
+                <img class="what-we-do-img" src="img/dribbble_illustration_v3 1.png" alt="img">
+                <div class="what-we-do-content">
+                    <h3 class="what-we-do-head">You may ask what SEO & why do you need it?</h3>
+                    <p class="what-we-do-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary.</p>
+                    <ul class="what-we-do-list">
+                        <li class="what-we-do-list-item">
+                            <img class="what-we-do-list-item-img" src="img/wwd-1.png" alt="img">
+                            <h4 class="what-we-do-list-item-head">Social Media Marketing</h4>
+                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        </li>
+                        <li class="what-we-do-list-item">
+                            <img class="what-we-do-list-item-img" src="img/wwd-2.png" alt="img">
+                            <h4 class="what-we-do-list-item-head">Email Marketing</h4>
+                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        </li>
+                        <li class="what-we-do-list-item">
+                            <img class="what-we-do-list-item-img" src="img/wwd-3.png" alt="img">
+                            <h4 class="what-we-do-list-item-head">SEO Optimization</h4>
+                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="funfacts">
