--- a/index.html
+++ b/index.html
@@ -107,102 +107,116 @@
         </div>
         <div class="wrapper wrapper-what-we-do">
             <div class="what-we-do">
-                <img class="what-we-do-img" src="img/dribbble_illustration_v3 1.png" alt="img">
                 <div class="what-we-do-content">
-                    <h3 class="what-we-do-head">You may ask what SEO & why do you need it?</h3>
+                    <h3 class="what-we-do-head">You may ask what<br> SEO & why do you need it?</h3>
                     <p class="what-we-do-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary.</p>
                     <ul class="what-we-do-list">
                         <li class="what-we-do-list-item">
                             <img class="what-we-do-list-item-img" src="img/wwd-1.png" alt="img">
-                            <h4 class="what-we-do-list-item-head">Social Media Marketing</h4>
-                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                            <div class="what-we-do-list-item-flex">
+                                <h4 class="what-we-do-list-item-head">Social Media Marketing</h4>
+                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts<br> for chang the Seamlessly underwhelm dures.</p>
+                            </div>
                         </li>
                         <li class="what-we-do-list-item">
                             <img class="what-we-do-list-item-img" src="img/wwd-2.png" alt="img">
+                            <div class="what-we-do-list-item-flex">
                             <h4 class="what-we-do-list-item-head">Email Marketing</h4>
-                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts<br> for chang the Seamlessly underwhelm dures.</p>
+                        </div>
                         </li>
                         <li class="what-we-do-list-item">
                             <img class="what-we-do-list-item-img" src="img/wwd-3.png" alt="img">
+                            <div class="what-we-do-list-item-flex">
                             <h4 class="what-we-do-list-item-head">SEO Optimization</h4>
-                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                            <p class="what-we-do-list-item-text">Business applications through revolutionary catalysts<br> for chang the Seamlessly underwhelm dures.</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="funfacts">
-            <ul class="funfacts-list">
-                <li class="funfact-list-item">
-                    <p class="funfact-list-item-number">95</p>
-                    <p class="funfact-list-item-text">Happy Clients</p>
+        <div class="wrapper wrapper-funfacts">
+            <div class="funfacts">
+                <ul class="funfacts-list">
+                    <li class="funfact-list-item">
+                        <p class="funfact-list-item-number">95</p>
+                        <p class="funfact-list-item-text">Happy Clients</p>
+                    </li>
                     <img src="img/Ellipse-1.png" alt="Ellipse-1">
-                </li>
-                <li class="funfact-list-item">
-                    <p class="funfact-list-item-number">115</p>
-                    <p class="funfact-list-item-text">Project Done</p>
+                    <li class="funfact-list-item">
+                        <p class="funfact-list-item-number">115</p>
+                        <p class="funfact-list-item-text">Project Done</p>
+                    </li>
                     <img src="img/Ellipse-2.png" alt="Ellipse-2">
-                </li>
-                <li class="funfact-list-item">
-                    <p class="funfact-list-item-number">8+</p>
-                    <p class="funfact-list-item-text">Years Of Experince</p>
+                    <li class="funfact-list-item">
+                        <p class="funfact-list-item-number">8+</p>
+                        <p class="funfact-list-item-text">Years Of Experince</p>
+                    </li>
                     <img src="img/Ellipse-3.png" alt="Ellipse-3">
-                </li>
-                <li class="funfact-list-item">
-                    <p class="funfact-list-item-number">12</p>
-                    <p class="funfact-list-item-text">National Awards</p>
-                </li>
-            </ul>
-        </div>
-        <div class="mailbox">
-            <div class="mailbox-content">
-                <h3 class="mailbox-head"></h3>
-                <p class="mailbox-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business through revolutionary.</p>
-                <div class="mailbox-input">
-                    <input class="mailbox-input-field" type="email">
-                    <button class="mailbox-input-btn" type="submit">Submit</button>
-                </div>
+                    <li class="funfact-list-item">
+                        <p class="funfact-list-item-number">12</p>
+                        <p class="funfact-list-item-text">National Awards</p>
+                    </li>
+                </ul>
             </div>
-            <img class="mailbox-img" src="img/mailbox-img.png" alt="img">
         </div>
-        <div class="plans">
-            <h3 class="plans-head">Our Plans</h3>
-            <p class="plans-text">Choose the right SEO for you</p>
-            <ul class="plans-list">
-                <li class="plan-list-item">
-                    <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">30</span>/mounth</h4>
-                    <p class="plan-list-item-price"></p>
-                    <ul class="plan-list-item-list">
-                        <li class="plan-list-item-list-itm">50GB Bandwidth</li>
-                        <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
-                        <li class="plan-list-item-list-itm">24 Hour Support</li>
-                        <li class="plan-list-item-list-itm">Customer Managemet</li>
-                    </ul>
-                    <button class="plan-list-item-btn">Get Started</button>
-                </li>
-                <li class="plan-list-item">
-                    <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">55</span>/mounth</h4>
-                    <p class="plan-list-item-price"></p>
-                    <ul class="plan-list-item-list">
-                        <li class="plan-list-item-list-itm">50GB Bandwidth</li>
-                        <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
-                        <li class="plan-list-item-list-itm">24 Hour Support</li>
-                        <li class="plan-list-item-list-itm">Customer Managemet</li>
-                    </ul>
-                    <button class="plan-list-item-btn">Get Started</button>
-                </li>
-                <li class="plan-list-item">
-                    <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">129</span>/mounth</h4>
-                    <p class="plan-list-item-price"></p>
-                    <ul class="plan-list-item-list">
-                        <li class="plan-list-item-list-itm">50GB Bandwidth</li>
-                        <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
-                        <li class="plan-list-item-list-itm">24 Hour Support</li>
-                        <li class="plan-list-item-list-itm">Customer Managemet</li>
-                    </ul>
-                    <button class="plan-list-item-btn">Get Started</button>
-                </li>
-            </ul>
+        <div class="wrapper wrapper-mailbox">
+            <div class="mailbox">
+                <div class="mailbox-content">
+                    <h3 class="mailbox-head">Check Your Website Speed</h3>
+                    <p class="mailbox-text">Distinctively exploit optimal alignments for intuitive bandwidth.<br>Quickly coordinate e-business through revolutionary.</p>
+                    <div class="mailbox-input">
+                        <input placeholder="Email Address" class="mailbox-input-field" type="email">
+                        <button class="mailbox-input-btn" type="submit">Submit</button>
+                    </div>
+                </div>
+                <img class="mailbox-img" src="img/mailbox-img.png" alt="img">
+            </div>
+        </div>
+        <div class="wrapper wrapper-plans">
+            <div class="plans">
+                <h3 class="plans-head">Our Plans</h3>
+                <p class="plans-text">Choose the right SEO for you</p>
+                <ul class="plans-list">
+                    <li class="plan-list-item">
+                        <p class="plan-list-item-class">Plus</p>
+                        <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">30</span>/mounth</h4>
+                        <p class="plan-list-item-price"></p>
+                        <ul class="plan-list-item-list">
+                            <li class="plan-list-item-list-itm">50GB Bandwidth</li>
+                            <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
+                            <li class="plan-list-item-list-itm">24 Hour Support</li>
+                            <li class="plan-list-item-list-itm">Customer Managemet</li>
+                        </ul>
+                        <button class="plan-list-item-btn">Get Started</button>
+                    </li>
+                    <li class="plan-list-item">
+                        <p class="plan-list-item-class">Beginer</p>
+                        <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">55</span>/mounth</h4>
+                        <p class="plan-list-item-price"></p>
+                        <ul class="plan-list-item-list">
+                            <li class="plan-list-item-list-itm">50GB Bandwidth</li>
+                            <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
+                            <li class="plan-list-item-list-itm">24 Hour Support</li>
+                            <li class="plan-list-item-list-itm">Customer Managemet</li>
+                        </ul>
+                        <button class="plan-list-item-btn">Get Started</button>
+                    </li>
+                    <li class="plan-list-item">
+                        <p class="plan-list-item-class">Advanced</p>
+                        <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">129</span>/mounth</h4>
+                        <p class="plan-list-item-price"></p>
+                        <ul class="plan-list-item-list">
+                            <li class="plan-list-item-list-itm">50GB Bandwidth</li>
+                            <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
+                            <li class="plan-list-item-list-itm">24 Hour Support</li>
+                            <li class="plan-list-item-list-itm">Customer Managemet</li>
+                        </ul>
+                        <button class="plan-list-item-btn">Get Started</button>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="team">
             <h3 class="team-head">Our Expert Team Members</h2>
