--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
                 <ul class="plans-list">
                     <li class="plan-list-item">
                         <p class="plan-list-item-class">Plus</p>
-                        <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">30</span>/mounth</h4>
-                        <p class="plan-list-item-price"></p>
+                        <h4 class="plan-list-item-head"><span class="numb">30</span>/mounth</h4>
                         <ul class="plan-list-item-list">
                             <li class="plan-list-item-list-itm">50GB Bandwidth</li>
                             <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
@@ -193,20 +192,18 @@
                     </li>
                     <li class="plan-list-item">
                         <p class="plan-list-item-class">Beginer</p>
-                        <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">55</span>/mounth</h4>
-                        <p class="plan-list-item-price"></p>
+                        <h4 class="plan-list-item-head"><span class="numb">55</span>/mounth</h4>
                         <ul class="plan-list-item-list">
                             <li class="plan-list-item-list-itm">50GB Bandwidth</li>
                             <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
                             <li class="plan-list-item-list-itm">24 Hour Support</li>
                             <li class="plan-list-item-list-itm">Customer Managemet</li>
                         </ul>
-                        <button class="plan-list-item-btn">Get Started</button>
+                        <button class="plan-list-item-btn-middle">Get Started</button>
                     </li>
                     <li class="plan-list-item">
                         <p class="plan-list-item-class">Advanced</p>
-                        <h4 class="plan-list-item-head"><span class="dollar">$</span><span class="numb">129</span>/mounth</h4>
-                        <p class="plan-list-item-price"></p>
+                        <h4 class="plan-list-item-head"><span class="numb">129</span>/mounth</h4>
                         <ul class="plan-list-item-list">
                             <li class="plan-list-item-list-itm">50GB Bandwidth</li>
                             <li class="plan-list-item-list-itm">Business & Financ Analysing</li>
