--- a/index.html
+++ b/index.html
@@ -215,85 +215,89 @@
                 </ul>
             </div>
         </div>
-        <div class="team">
-            <h3 class="team-head">Our Expert Team Members</h2>
-            <p class="team-text">This new-found knowledge may then be used by engineers to create new tools and machines.</p>
-            <ul class="team-list">
-                <li class="team-list-item">
-                    <img class="team-item-photo" src="img/team1.png" alt="photo">
-                    <p class="team-item-name">Nattasha</p>
-                    <p class="team-item-prof">Web Develper</p>
-                    <ul class="links-list">
-                        <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
-                        <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
-                        <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
-                        <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
-                    </ul>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-item-photo" src="img/team2.png" alt="photo">
-                    <p class="team-item-name">John Doe</p>
-                    <p class="team-item-prof">Web Designer</p>
-                    <ul class="links-list">
-                        <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
-                        <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
-                        <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
-                        <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
-                    </ul>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-item-photo" src="/img/team3.png" alt="photo">
-                    <p class="team-item-name">Haris Milas</p>
-                    <p class="team-item-prof">Ceo & Co-Funder</p>
-                    <ul class="links-list">
-                        <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
-                        <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
-                        <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
-                        <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
-                    </ul>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-item-photo" src="img/team4.png" alt="photo">
-                    <p class="team-item-name">Nelson Mecoy</p>
-                    <p class="team-item-prof">Marketing Manager</p>
-                    <ul class="links-list">
-                        <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
-                        <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
-                        <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
-                        <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
-                    </ul>
-                </li>
-            </ul>
+        <div class="wrapper wrapper-team">
+            <div class="team">
+                <h3 class="team-head">Our Expert Team Members</h2>
+                <p class="team-text">This new-found knowledge may then be used by engineers to<br>   create new tools and machines.</p>
+                <ul class="team-list">
+                    <li class="team-list-item">
+                        <img class="team-item-photo" src="img/team1.png" alt="photo">
+                        <p class="team-item-name">Nattasha</p>
+                        <p class="team-item-prof">Web Develper</p>
+                        <ul class="links-list">
+                            <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
+                            <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
+                            <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
+                            <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
+                        </ul>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-item-photo" src="img/team2.png" alt="photo">
+                        <p class="team-item-name">John Doe</p>
+                        <p class="team-item-prof">Web Designer</p>
+                        <ul class="links-list">
+                            <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
+                            <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
+                            <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
+                            <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
+                        </ul>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-item-photo" src="/img/team3.png" alt="photo">
+                        <p class="team-item-name">Haris Milas</p>
+                        <p class="team-item-prof">Ceo & Co-Funder</p>
+                        <ul class="links-list">
+                            <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
+                            <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
+                            <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
+                            <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
+                        </ul>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-item-photo" src="img/team4.png" alt="photo">
+                        <p class="team-item-name">Nelson Mecoy</p>
+                        <p class="team-item-prof">Marketing Manager</p>
+                        <ul class="links-list">
+                            <li class="links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
+                            <li class="links-list-item"><img src="img/Vector.svg" alt="tw"></li>
+                            <li class="links-list-item"><img src="img/linkedin.svg" alt="link"></li>
+                            <li class="links-list-item"><img src="img/google.svg" alt="google"></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="testimonials">
-            <h3 class="testimonials-head">Our Clients Say</h3>
-            <p class="testimonials-text">Our in - house search engine experts deliver profitable Google, Bing, Yahoo Ranking.</p>
-            <ul class="testimonials-list">
-                <li class="testimonials-list-item">
-                    <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
-                    <img class="testimonials-item-img" src="img/photo1.png" alt="photo">
-                    <p class="testimonials-item-name">Rabith Halson</p>
-                    <p class="testimonials-item-prof">Web Design</p>
-                </li>
-                <li class="testimonials-list-item">
-                    <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
-                    <img class="testimonials-item-img" src="img/photo2.png" alt="photo">
-                    <p class="testimonials-item-name">Selena Roy</p>
-                    <p class="testimonials-item-prof">UI Designer</p>
-                </li>
-                <li class="testimonials-list-item">
-                    <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
-                    <img class="testimonials-item-img" src="img/photo1.png" alt="photo">
-                    <p class="testimonials-item-name">Rabith Halson</p>
-                    <p class="testimonials-item-prof">Web Design</p>
-                </li>
-                <li class="testimonials-list-item">
-                    <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
-                    <img class="testimonials-item-img" src="img/photo2.png" alt="photo">
-                    <p class="testimonials-item-name">Selena Roy</p>
-                    <p class="testimonials-item-prof">UI Designer</p>
-                </li>
-            </ul>
+        <div class="wrapper wrapper-testimonials">
+            <div class="testimonials">
+                <h3 class="testimonials-head">Our Clients Say</h3>
+                <p class="testimonials-text">Our in - house search engine experts deliver profitable Google,<br> Bing, Yahoo Ranking.</p>
+                <ul class="testimonials-list">
+                    <li class="testimonials-list-item">
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <img class="testimonials-item-img" src="img/photo1.png" alt="photo">
+                        <p class="testimonials-item-name">Rabith Halson</p>
+                        <p class="testimonials-item-prof">Web Design</p>
+                    </li>
+                    <li class="testimonials-list-item">
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <img class="testimonials-item-img" src="img/photo2.png" alt="photo">
+                        <p class="testimonials-item-name">Selena Roy</p>
+                        <p class="testimonials-item-prof">UI Designer</p>
+                    </li>
+                    <li class="testimonials-list-item">
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <img class="testimonials-item-img" src="img/photo1.png" alt="photo">
+                        <p class="testimonials-item-name">Rabith Halson</p>
+                        <p class="testimonials-item-prof">Web Design</p>
+                    </li>
+                    <li class="testimonials-list-item">
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <img class="testimonials-item-img" src="img/photo2.png" alt="photo">
+                        <p class="testimonials-item-name">Selena Roy</p>
+                        <p class="testimonials-item-prof">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="blogpost">
             <h3 class="blogpost-head">Our Latest News</h4>
